--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,10 @@
-name = "AdjArrays"
+name = "AdjacencyArrays"
 uuid = "04492356-0612-448d-ac0d-41882891aef9"
 authors = ["João Paludo <jas.paludo@gmail.com>"]
 version = "0.1.0"
 
 [deps]
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
